welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:11: error: not found: value getMondehauteur
  for (i<- 1 to getMondehauteur()) {recule()}
                ^